# kit-app-template

./: BOOTSTRAP_COMPLETE.txt  README_BOOTSTRAP.md  repo.toml
_build/: temp_check_zmx.py
_build/bootstrap/: documentation
bootstrap/: README.md  __init__.py  loader.py  loader_backup.py  systemprompt.md
bootstrap/capabilities/: 00_set_units_mm.py  25_apply_lens_profile.py  40_add_custom_attributes.py  46_configure_led_profile.py  __init__.py  _disabled_10_enable_extensions.py  _disabled_20_configure_telecentric_cameras.py
bootstrap/documentation/: BOOTSTRAP_SYSTEM.md  (+6 more)
custom_scripts/: apply_visiondt_to_all_lights.py  check_visiondt_attributes.py  enhanced_prim_watcher.py  fix_recent_files.py  lens_selector.py  sync_visiondt_colors.py  test_bootstrap_manually.py
logs/: SESSION_2025-11-12_SUMMARY.md  STATUS.md  project_review_2025-11-12.md
mcp-omniverse-docs/: .cursorrules  .gitignore  DISTRIBUTION.md  DISTRIBUTION_PACKAGE_INFO.md  INSTALL.md  INSTALL_FOR_USERS.md  MCP_SUMMARY.md  QUICKSTART_DISTRIBUTION.md  README.md  README_DISTRIBUTION.md  USAGE.md  create_distribution_package.py  mcp_config.example.json  mcp_config_LINUX_EXAMPLE.json  mcp_config_MAC_EXAMPLE.json  mcp_config_TEMPLATE.json  mcp_config_WINDOWS_EXAMPLE.json  pyproject.toml  requirements.txt  setup.py  show_render_settings_docs.py  start_mcp.bat  test_builtin_docs.py  test_mcp.py  test_render_settings.py  test_web_access.py  verify_structure.py
mcp-omniverse-docs/src/: __init__.py  __main__.py  cache.py  config.py  fetcher.py  server.py
source/: rendered_template_metadata.json
(+33 files in other folders)
